Corregí imagen de tarea 2.1

--- a/Tema 2/21200581 - Tarea 2.1. Expresiones Regulares.md
+++ b/Tema 2/21200581 - Tarea 2.1. Expresiones Regulares.md
@@ -25,7 +25,10 @@ Una expresión regular, también conocida como regex o regexp, es una secuencia 
 
 -   Los cuantificadores especifican cuántas veces debe repetirse un elemento en el texto.
 -   Algunos ejemplos de cuantificadores comunes son `*` (cero o más veces), `+` (una o más veces), `?` (cero o una vez) y `{n,m}` (entre n y m veces).
-![Basic Regular Expression | Cizixs Write Here](https://twiki.org/p/pub/Codev/TWikiPresentation2013x03x07/regex-example-2.png)
+
+<p align="center">
+  <img src="https://twiki.org/p/pub/Codev/TWikiPresentation2013x03x07/regex-example-2.png" alt="Expresiones Regulares" width = 400>
+</p>
 
 Además, las expresiones regulares son un equivalente algebraico para un autómata, lo que significa que pueden describir exactamente los mismos lenguajes que los autómatas pueden expresar, es decir, lenguajes regulares. Sin embargo, ofrecen algo adicional que los autómatas no: una forma declarativa de expresar las cadenas que queremos aceptar. Esto las hace útiles en muchos contextos donde se necesitan describir patrones en texto de manera sencilla pero muy efectiva.
 
@@ -59,7 +62,7 @@ Resultados: Una vez que se ha completado la búsqueda, el motor devuelve una lis
 Son una herramienta poderosa para describir patrones en datos de cadenas de texto. La importancia de las expresiones regulares radica en varios aspectos:
 
 1.  **Eficiencia en el Desarrollo**: Las expresiones regulares permiten realizar búsquedas y manipulaciones de texto de manera concisa y eficiente. Al utilizar un patrón de expresión regular, los desarrolladores pueden escribir menos código y lograr el mismo resultado que con soluciones más extensas y complejas. Esto ahorra tiempo y reduce la posibilidad de errores en el desarrollo de software.
-<img src="https://www.tithink.com/wp-content/uploads/2018/05/practicas-desarollo-software.jpeg" width="300"/>
+<p align = "center" ><img src="https://www.tithink.com/wp-content/uploads/2018/05/practicas-desarollo-software.jpeg" width="300"/></p>
 
 2. **Velocidad de Ejecución**: Debido a su estructura optimizada, las expresiones regulares son más rápidas en la ejecución que otros métodos de manipulación de texto. Esto es especialmente importante en aplicaciones que requieren un procesamiento rápido de grandes volúmenes de datos, como análisis de logs, filtrado de correos electrónicos y validación de formularios en línea.
 
