--- a/Tema 2/Tarea 2.3.ipynb
+++ b/Tema 2/Tarea 2.3.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
    "source": [
     "def validar_username(username):\n",
     "    # Expresión regular para validar el nombre de usuario\n",
-    "    patron = r'^^[\\w-]{3,16}$'\n",
+    "    patron = r'^[\\w-]{3,16}$'\n",
     "    \n",
     "    # Validar el nombre de usuario\n",
     "    if re.match(patron, username):\n",
