--- a/Tema 2/Tarea 2.3.ipynb
+++ b/Tema 2/Tarea 2.3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La contraseña \"Pl1@Noe¡\" es válida.\n",
+      "La contraseña \"Pl@9Noe¡\" es válida.\n",
       "La contraseña \"123456ab\" no es válida.\n"
      ]
     }
@@ -47,7 +47,7 @@
     "        print(f'La contraseña \"{password}\" no es válida.')\n",
     "\n",
     "# Pruebas\n",
-    "validar_password(\"Pl1@Noe¡\")\n",
+    "validar_password(\"Pl@9Noe¡\")\n",
     "validar_password(\"123456ab\") \n",
     "\n"
    ]
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
     "        print(f'El nombre de usuario \"{username}\" no es válido.')\n",
     "\n",
     "# Pruebas\n",
-    "validar_nombre_usuario(\"Huam-pa_782\")\n"
+    "validar_username(\"Huam-pa_782\")\n"
    ]
   }
  ],
